# pyside-demo

./: README.md
100-hello/: hello.py  pyproject.toml
101-timerLabel/: README.md  pyproject.toml  timerLabel.py
102-table_widget_demo/: README.md  main.py  pyproject.toml
103-dialog_app_demo/: README.md  pyproject.toml
104-expenses_tool/: README.md  main.py  pyproject.toml
105-QTextEdit_demo/: main.py  pyproject.toml
